--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,5 +1,5 @@
-.message {
-    font-size: 30px;
+.section {
+    display: block;
     font-weight: 700;
-    margin: 30px 0;
+    font-size: 25px;
 }
